--- a/franske-course-information/modules/itc-2480/pages/lab5.adoc
+++ b/franske-course-information/modules/itc-2480/pages/lab5.adoc
@@ -110,7 +110,7 @@ DHCP=ipv4
 You would then need to restart networkd like `systemctl restart systemd-networkd` command as the root user to apply the change and would have to log in through the console of the virtual maching to check the IP before being able to connect remotely.
 ====
 --
-. Although we set nameservers in the _/etc/systemd/network/10-primary.network_ file they are not actually in use yet. DNS servers have traditionally be stored in the _/etc/resolv.conf_ file which is edited manually when they need to be chnaged. However, this presents a problem for mobile devices which may need to frequently change DNS servers as they are connected to different networks. While there have been multiple schemes for doing this in the past including having the DHCP client software edit the _/etc/resolv.conf_ file or using an intermediate software package such as *openrsolv* or *resolfconf* to manage this file with new-style networkd configuration there is also a new way to manage DNS settings using the *systemd-resolved* program.
+. Although we set nameservers in the _/etc/systemd/network/10-primary.network_ file they are not actually in use yet. DNS servers have traditionally be stored in the _/etc/resolv.conf_ file which is edited manually when they need to be changed. However, this presents a problem for mobile devices which may need to frequently change DNS servers as they are connected to different networks. While there have been multiple schemes for doing this in the past including having the DHCP client software edit the _/etc/resolv.conf_ file or using an intermediate software package such as *openrsolv* or *resolfconf* to manage this file with new-style networkd configuration there is also a new way to manage DNS settings using the *systemd-resolved* program.
 * Install the *systemd-resolved* package on your system using the appropriate *apt* command.
 * Enable the systemd-resolved service with the `systemctl enable systemd-resolved` command and start with with the `systemctl start systemd-resolved` command. Both of these will need to be run as the root user.
 . Make sure that you can SSH to your Linux server's new static IP address and that you can `ping google.com` from your Linux server (press CTRL+C to stop the ping).
